# wikipedia-revisions

./: .gitattributes  .gitignore  Readme.org  access_db.py  drop_empty_rows.py  fix_my_mistake.py  get_pages_for_occupations.py  init_db.py  merge_data_with_oesm_history.py  pyproject.toml  requirements.txt  terminal_interface.py
Analysis/: Analysis.ipynb  Analysis.py  DETAILED_gender_race_analysis.ipynb  Leon Testing.py  MAJOR_gender_race_analysis.ipynb  Occupation.py  Page_Analysis.ipynb  Untitled.ipynb  analysis.py  analysis_detailed.ipynb  analysis_gender_race.ipynb  analysis_major.ipynb  analyze_page_lenghts.py  bin_revision_history.py  count_contributions.py  create_dataframes.py  create_df_for_non_ipynb.py  gender_race_analysis.ipynb  page_lenghts.json  path_util.py  plot_page_statistics.py  reading_cpsaat.py  stats.py  sum_stats.py  tlcc.py  unique edits.ipynb  visualizations.py  viz_reg.py
Analysis/old/: Occupation.py  analyze_page_lenghts.py  bin_revision_history.py  get_page_length.py  get_page_length_subset_indices.py  plot_page_statistics.py  stats.py
bls_utils/: pyproject.toml  requirements.txt
bls_utils/bls_utils/: __init__.py  get_occupations.py
data/: aggregated_edits.db
sql_utils/: __init__.py
src/: get_pages_for_occupations.py  merge_data_with_oesm_history.py
src/Bertopic/: path_util.py  split_page_into_paragraphs.py  test_data.py  testing.py  topic_model_articles.py
src/data_labelling/: merge_main_table.py  retrieve_candidate_links.py
src/data_management/: Occupation.py  extract_transform_load.py  map_2018-2021.py  path_util.py  rename_revisions.py  revision_dataframe.py  seperate_links.py  terminal_interface.py  (+1 more)
tests/: test_bls_utils.py
wiki_utils/: __init__.py  get_historic_articles.py  pyproject.toml  requirements.txt
wiki_utils/tests/: test_wiki_utils.py
wiki_utils/wiki_utils/: __init__.py  get_historic_articles.py  search_wikipedia.py
(+8 files in other folders)
