[tool.poetry]
name = "wiki_utils"
version = "0.1.0"
description = ""
authors = ["Jakob Hauser <jakob.e.hauser@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.0"
pandas = "^1.4.3"
openpyxl = "^3.0.10"
xlrd = "^2.0.1"
jupyterlab = "^3.4.3"
matplotlib = "^3.5.2"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
tqdm = "^4.64.0"
pytest = "^7.0"
pyright = "^1.1.255"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
