[tool.poetry]
name = "bls_utils"
version = "0.1.0"
description = ""
authors = ["Jakob Hauser <jakob.e.hauser@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyright = "^1.1.256"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
